# xiaolin-wu-algorithm

./: .gitignore  LICENSE  README.md  xiaolin-wu-algorithm.cabal
script/: ghcid
src/: Main.hs
