name:                       xiaolin-wu-algorithm
version:                    0.1.0.0
synopsis:                   Xiaolin Wu's fast antialiased line drawing algorithm in Haskell
description:                Xiaolin Wu's fast antialiased line drawing algorithm in Haskell
homepage:                   https://github.com/rcook/xiaolin-wu-algorithm#readme
license:                    MIT
license-file:               LICENSE
author:                     Richard Cook
maintainer:                 rcook@rcook.org
copyright:                  2018 Richard Cook
category:                   Command Line
build-type:                 Simple
cabal-version:              >= 1.10
extra-source-files:         README.md

source-repository head
  type:                     git
  location:                 https://github.com/rcook/xiaolin-wu-algorithm

executable xiaolin-wu-algorithm
  default-language:         Haskell2010
  ghc-options:              -Wall -fno-warn-missing-signatures
  hs-source-dirs:           src
  main-is:                  Main.hs
  build-depends:            base >= 4.7 && < 5
